--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@ header {
   color: #fff;
   margin: 0 auto;
   width: 1000px;
-  height: 300px;
+  height: 250px;
 }
 
 main {
@@ -24,4 +24,9 @@ main {
   margin: 0 auto;
   width: 800px;
   padding: 50px 100px 500px 100px;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
 }
