--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,3 +30,27 @@ a {
   color: #fff;
   text-decoration: none;
 }
+
+.blogs {
+  display: flex;
+}
+
+.article {
+  margin: 10px;
+  border-radius: 10px;
+  padding:20px;
+  width:200px;
+  list-style: none;
+  background-color: #646455;
+
+  h2, h3 {
+    margin: 5px 0;
+    width: 200px;
+    text-align: center;
+  }
+
+  img {
+    margin: 0 auto;
+    border-radius: 10px;
+  }
+}
