--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,3 +54,17 @@ a {
     border-radius: 10px;
   }
 }
+
+pre code {
+  border-radius: 10px;
+  margin: 10px;
+}
+
+hr {
+  margin: 15px 0;
+}
+
+p {
+  font-size: 16px;
+  margin: 4px 0;
+}
