--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,8 @@ html {
 }
 
 body {
+  margin: 0 auto;
+  width: 1000px;
   display: block;
 }
 
@@ -23,7 +25,7 @@ main {
   background-color: #404037;
   margin: 0 auto;
   width: 800px;
-  padding: 50px 100px 500px 100px;
+  padding: 50px 100px 300px 100px;
 }
 
 a {
@@ -33,24 +35,27 @@ a {
 
 .blogs {
   display: flex;
+  width: 800px;
 }
 
 .article {
+  display: block;
   margin: 10px;
   border-radius: 10px;
-  padding:20px;
-  width:200px;
+  padding: 20px;
+  /*width: 190px;*/
+  height: 240px;
   list-style: none;
   background-color: #646455;
 
   h2, h3 {
     margin: 5px 0;
-    width: 200px;
+    width: 190px;
     text-align: center;
   }
 
   img {
-    margin: 0 auto;
+    margin: 0 20px;
     border-radius: 10px;
   }
 }
@@ -64,7 +69,11 @@ hr {
   margin: 15px 0;
 }
 
+h1 {
+  padding: 4px 10px;
+}
+
 p {
   font-size: 16px;
-  margin: 4px 0;
+  padding: 4px 10px;
 }
