--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,7 @@ a {
 }
 
 .blogs {
+  flex-wrap: wrap;
   display: flex;
   width: 800px;
 }
@@ -43,7 +44,6 @@ a {
   margin: 10px;
   border-radius: 10px;
   padding: 20px;
-  /*width: 190px;*/
   height: 240px;
   list-style: none;
   background-color: #646455;
