--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,8 +34,8 @@ a {
 }
 
 .blogs {
-  flex-wrap: wrap;
   display: flex;
+  flex-wrap: wrap;
   width: 800px;
 }
 
@@ -44,6 +44,7 @@ a {
   margin: 10px;
   border-radius: 10px;
   padding: 20px;
+  /*width: 190px;*/
   height: 240px;
   list-style: none;
   background-color: #646455;
