--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,13 +44,14 @@ a {
   margin: 10px;
   border-radius: 10px;
   padding: 20px;
-  height: 240px;
+  height: 290px;
   list-style: none;
   background-color: #646455;
 
   h2, h3 {
     margin: 5px 0;
-    width: 190px;
+    font-size: 22px;
+    width: 240px;
     text-align: center;
   }
 
@@ -69,6 +70,11 @@ hr {
   margin: 15px 0;
 }
 
+h2 {
+  margin-left: 10px;
+  font-size: 16px;
+}
+
 h1 {
   padding: 4px 10px;
 }
@@ -76,4 +82,21 @@ h1 {
 p {
   font-size: 16px;
   padding: 4px 10px;
+}
+
+.shortcut {
+  background-color: #ffffff;
+  border-radius: 50px;
+  margin: 10px;
+  padding: 10px;
+}
+
+.flex {
+  display: flex;
+  h2 {
+    height: 70px;
+    text-align: center;
+    font-size: 20px;
+    line-height: 70px;
+  }
 }
