--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,11 +85,15 @@ p {
   padding: 4px 10px;
 }
 
-.shortcut {
+.shortcut,.mutual-link {
   background-color: #ffffff;
   border-radius: 50px;
   margin: 10px;
   padding: 10px;
+}
+
+.mutual-link {
+  padding: 0;
 }
 
 .flex {
@@ -99,5 +103,19 @@ p {
     text-align: center;
     font-size: 20px;
     line-height: 70px;
+  }
+}
+
+.banner {
+  background-color: #000000;
+  padding: 30px 290px;
+  border-radius: 20px;
+  margin: 30px;
+
+  h2 {
+    padding: 0;
+    margin: 0;
+    width: 200px;
+    text-align: center;
   }
 }
