--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,3 +119,50 @@ p {
     text-align: center;
   }
 }
+
+@media screen and (max-width: 480px) {
+
+  body {
+    width: 375px;
+  }
+
+  header {
+    width: 375px;
+    height: 235px;
+  }
+
+  main {
+    width: 325px;
+    padding: 30px 25px 500px 25px;
+  }
+
+  .blogs {
+    width: 325px;
+  }
+
+  .flex {
+    display: block;
+    margin: 15px 0;
+    h2 {
+      height: auto;
+      line-height: 30px;
+    }
+  }
+
+  .banner {
+    display: none;
+  }
+
+  .flexbox {
+    display: flex;
+  }
+
+  .space_left {
+    margin-left: auto;
+  }
+
+  .space_right {
+    margin-right: auto;
+  }
+
+}
