--- a/src/app/styles/header.module.css
+++ b/src/app/styles/header.module.css
@@ -23,3 +23,29 @@
 .header_button:hover {
     background-color: #919163;
 }
+
+@media screen and (max-width: 480px) {
+
+    .header_img {
+        height: auto;
+        width: 100%;
+    }
+
+    .flexbox {
+        width: 100%;
+        height: 120px;
+    }
+
+    .header_button {
+        font-size: 16px;
+        width: 335px;
+        height: 30px;
+        padding: 5px 20px;
+        line-height: 30px;
+    }
+
+    .flexbox {
+        display: block;
+    }
+    
+}
